2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Various fixes to the LL suite.
	
	* benchmarks/livermore/kernel2.c: Use alternate implementation.	

	* benchmarks/livermore/kernel8.c: Fix array offseting. Use fixed
	array bounds. Check array dimensions on entry.
	
	* benchmarks/livermore/kernel15.c: Use fixed array bounds.  Check
	array dimensions on entry.
	
	* benchmarks/livermore/kernel23.c: Fix off-by-one on array
	bounds. Check array dimensions on entry.

	* benchmarks/livermore/ll-bounds.ods,
	* benchmarks/livermore/ll-bounds.csv: Fix array bounds.

	* benchmarks/livermore/ll-generate.py: Populate "description" and
	"author" fields in the right order.
	
2009-12-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in benchmarking output.

	* benchmarks/lib/benchmark.c: Insert line break before SEP dump.

2009-12-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Convert more benchmark input for use with `make check'.

	* benchmarks/fft/fft.d8,
	* benchmarks/mandel/mandel.d1,
	* benchmarks/livermore/ll-generate.py: Annotate some inputs for
	`make check'.

2009-12-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Generate BLAS data automatically.

	* benchmarks/blas/gendata.sh: New.
	
	* benchmarks/blas/data/cvv.d1, benchmarks/blas/data/cvv.d10,
	benchmarks/blas/data/cvv.d100, benchmarks/blas/data/cvv.d1000,
	benchmarks/blas/data/cvv.d10000, benchmarks/blas/data/cvv.d100000,
	benchmarks/blas/data/cvv.d2, benchmarks/blas/data/cvv.d20,
	benchmarks/blas/data/cvv.d200, benchmarks/blas/data/cvv.d2000,
	benchmarks/blas/data/cvv.d20000, benchmarks/blas/data/cvv.d5,
	benchmarks/blas/data/cvv.d50, benchmarks/blas/data/cvv.d500,
	benchmarks/blas/data/cvv.d5000, benchmarks/blas/data/cvv.d50000,
	benchmarks/blas/data/vvcc.d1, benchmarks/blas/data/vvcc.d10,
	benchmarks/blas/data/vvcc.d100, benchmarks/blas/data/vvcc.d1000,
	benchmarks/blas/data/vvcc.d10000,
	benchmarks/blas/data/vvcc.d100000, benchmarks/blas/data/vvcc.d2,