@@ -35,22 +35,22 @@ sl_def(cell, void,
        sl_glparm(const double*restrict, CX),
        sl_glparm(double*restrict, PX))
 {
-    sl_index(jk);
-    
-    double (*restrict PX)[(size_t)sl_getp(n)][25] = (double (*)[(size_t)sl_getp(n)][25])(double*)sl_getp(PX);
-    const double (*restrict CX)[(size_t)sl_getp(n)][25] = (const double (*)[(size_t)sl_getp(n)][25])(const double*)sl_getp(CX);
-    const double (*restrict VY)[25][(size_t)sl_getp(n)] = (const double (*)[25][(size_t)sl_getp(n)])(const double*)sl_getp(VY);
+    sl_index(ij);
+    const size_t n = sl_getp(n);
 
-    long k = jk / 25;
-    long j = jk % 25;
-    double CX_kj = (*CX)[j][k];
+    double (*restrict PX)[n][25] = (double (*)[n][25])(double*)sl_getp(PX);
+    const double (*restrict CX)[n][25] = (const double (*)[n][25])(const double*)sl_getp(CX);
+    const double (*restrict VY)[25][n] = (const double (*)[25][n])(const double*)sl_getp(VY);
+
+    long i = ij % 25;
+    long j = ij / 25;
 
     //N.B. can easily make the following into a new family,
     //but requires a reduction over the number of cores
-    long i;
-    double px_ij = 0.0;
-    for (i = 0; i < sl_getp(n); ++i)
-        px_ij += (*VY)[k][i] * CX_kj;
+    long k;
+    double px_ij = (*PX)[j][i];
+    for (k = 0; k < 25; ++k)
+        px_ij += (*VY)[k][i] * (*CX)[j][k];
     //save result
     (*PX)[j][i] = px_ij;
 }
@@ -76,7 +76,7 @@ sl_def(kernel21, void,
 
     //create the family of the appropriate size
     //specified in the 'inner' array
-    sl_create(,, 0, 25*25,1, 0,, cell,
+    sl_create(,, 0, 25*sl_getp(n),1, 0,, cell,
               sl_glarg(size_t, , sl_getp(n)),
               sl_glarg(const double*, , sl_getp(VY)),
               sl_glarg(const double*, , sl_getp(CX)),
