@@ -4,7 +4,7 @@
 3,"IP","Inner product",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('Q','o')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('X','1..n')","","","","","D('Z','1..n')","","","","","","","","","","","","","","",""
 4,"BLE","Banded linear equations",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('XZ','1..n,W')","D('Y','5..n')","","","","","","","","","","","","","","","",""
 5,"TDE(nv)","Tri-diagonal elimination, below diagonal (no vectors)",0,1,"","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('X','1..n,W')","","","","D('Y','2..n')","D('Z','2..n')","","","","","","","","","","","","","","",""
-6,"GLRE","General linear recurrence equations ",0,"0,06","","","","","","","","","","D('B','2..n,1..n')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('W','1..n-1,W')","","","","","","","","","","","","","","","","","","","","",""
+6,"GLRE","General linear recurrence equations ",0,"0,06","","","","","","","","","","D('B','2..n,1..n')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('W','1..n,W')","","","","","","","","","","","","","","","","","","","","",""
 7,"ESF","Equation of state fragment",0,"0,99","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('Q','x')","D('R','x')","","","","","","","","D('T','x')","D('U','1..n+6')","","","","","","","","","","","","","","","","","","","D('X','1..n,W')","","","","D('Y','1..n')","D('Z','1..n')","","","","","","","","","","","","","","",""
 8,"ADII","A.D.I. Integration",0,"0,1","D('A11','x')","D('A12','x')","D('A13','x')","D('A21','x')","D('A22','x')","D('A23','x')","D('A31','x')","D('A32','x')","D('A33','x')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","D('SIG','x')","","","","D('U1','1..4,1..n+1,1..2,W')","D('U2','1..4,1..n+1,1..2,W')","D('U3','1..4,1..n+1,1..2,W')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","",""
 9,"IPR","Integrate predictors",0,"0,1","","","","","","","","","","","","","D('C0','x')","","","","","","D('DM22','x')","D('DM23','x')","D('DM24','x')","D('DM25','x')","D('DM26','x')","D('DM27','x')","D('DM28','x')","","","","","","","","","","","","","D('PX','1..13,1..n,W')","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","",""
